--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,7 @@
                     Seja bem-vindo(a) novamente! Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.
                 </p>
                 <form action="login.php" method="post">
-                    
+
                 </form>
             </div>
 
