--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> <!--DEVE FICAR SEM QUEBRA DE LINHA-->
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mediaquery.css">
 
@@ -21,8 +22,29 @@
                 <p>
                     Seja bem-vindo(a) novamente! Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.
                 </p>
-                <form action="login.php" method="post">
-
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-icons">
+                            person
+                            </span>
+                        
+                        <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
+                        <label for="ilogin"login></label> 
+                    </div>
+                    <div class="campo">
+                        <span class="material-icons">
+                            key
+                            </span>
+                        
+                        <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="15">
+                        <label for="isenha"></label>
+                    </div>
+                    <div>
+                        <input type="submit" value="Entrar">
+                        <a href="esqueci.html"> Esqueci a senha <span class="material-icons">
+                            email
+                            </span></a>
+                    </div>
                 </form>
             </div>
 
